--- a/Web.config
+++ b/Web.config
@@ -53,7 +53,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="EncuestaModel" connectionString="data source=10.10.1.16;initial catalog=encuestaDB;user id=sa;password=Colonial#123_;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="EncuestaModel" connectionString="data source=10.10.1.10;initial catalog=encuestaDB;user id=sa;password=colonial@2000;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
